doc(website): Adding page for creating new Java plugin